manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: aniket-test
spec:
  type: ClusterIP
  selector:
    app: vault
  ports:
    - port: 8200
      targetPort: 8200
